--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,8 @@
 {
-    "name": "nahid/talk",
+    "name": "RussellSk/chat_module_laravel",
     "description": "Talk is a Laravel 5 based realtime messaging, chatting and conversation system. It helps to develop users messaging, chatting and conversations in easy way.",
     "keywords": ["message", "inbox", "conversations", "chat", "php", "laravel", "realtime", "real-time"],
-    "homepage": "https://github.com/nahid/talk",
+    "homepage": "https://github.com/RussellSk/chat_module_laravel",
     "license": "CC-BY-3.0",
     "authors": [
         {
